# MatrixScreen

./: CLAUDE.md  CMakeLists.txt  README.md  README.txt  build.bat  install.bat
.github/workflows/: ci.yml  prerelease.yml  release.yml
src/: MatrixScreensaver.rc  batch_renderer.cpp  batch_renderer.h  character_effects.cpp  character_effects.h  common.h  config_dialog.cpp  config_dialog.h  dirty_rect_manager.cpp  dirty_rect_manager.h  logger.cpp  logger.h  main.cpp  mask_loader.cpp  mask_loader.h  matrix_renderer.cpp  matrix_renderer.h  matrix_screensaver.cpp  matrix_screensaver.h  memory_pool.h  performance_metrics.cpp  performance_metrics.h  resource.h  settings_manager.cpp  settings_manager.h
